@@ -1,3 +1,8 @@
+2008-10-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/forward_list.h (forward_list<>::insert_after): Minor
+	cosmetic changes.
+
 2008-10-16  Edward Smith-Rowland  <3dw4rd@verizon.net>
 
 	* include/bits/forward_list.h: Factor list construction to dispatch
